sandbox/output
MedicineClashTest.java:34: error: constructor Prescription in class Prescription cannot be applied to given types;
            new Prescription(LocalDate.now().minusDays(30), 
            ^
  required: no arguments
  found: LocalDate,int,String
  reason: actual and formal argument lists differ in length
MedicineClashTest.java:36: error: constructor Medicine in class Medicine cannot be applied to given types;
        medicines.add(new Medicine("Codeine", prescriptions));
                      ^
  required: no arguments
  found: String,Set<Prescription>
  reason: actual and formal argument lists differ in length
2 errors
